attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -29,7 +29,6 @@
         margin: 0;
         top: 0%;
         left: 0;
-        background-color: greenyellow;
     }
 }
 .titles{
